--- a/_site.yml
+++ b/_site.yml
@@ -9,7 +9,7 @@ navbar:
       href: "publications.html"
   right:
     - icon: fa-envelope fa-lg
-      href: mailto:<jg3780@cumc.columbia.edu>
+      href: mailto:<jg3780@columbia.edu>
     - icon: ai-google-scholar ai-lg
       href: https://scholar.google.com/citations?user=aCh-UBUAAAAJ&hl=en
     - icon: fa-github fa-lg
