--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /about/
   - title: "Publications"
     url: /publications/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+  - title: "Posts"
+    url: /posts/
   # - title: "Sitemap"
   #   url: /sitemap/
