--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ main:
     url: /publications/
   - title: "Posts"
     url: /posts/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  # - title: "Gallery"
+  #   url: /gallery/
