--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,8 @@ analytics:
 author:
   name             : "Jia Guo"
   avatar           : "/assets/images/sneaker.jpg"
-  bio              : "Ph.D. candidate in Biostatistics at Columbia University"
-  location         : "New York, NY"
+  bio              : "Alpha Researcher"
+  location         : "Stamford, CT"
   email            :
   links:
     - label: "Email"
